--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     <img src="photos/cnandi.png" style="width:128px;height:128px;">
 
    <p>
-   I am a graduate student in the <a href="http://uwplse.org/">PLSE</a> group
-   in Computer Science and Engineering at University of Washington, Seattle.
-   I work with <a target="_blank"
-                  href="http://homes.cs.washington.edu/~djg/">Dan Grossman</a>
-   and <a target="_blank"
-          href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>.
+   I am soon to be a Senior Researcher at <a href="https://certora.com/">Certora</a>.
+   I recently graduated with a PhD
+   from the <a href="http://uwplse.org/">PLSE</a> group
+   at the University of Washington, Seattle where I had a wonderful time
+   working with my incredible advisors,
+   <a target="_blank" href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>,
+   and <a target="_blank" href="http://homes.cs.washington.edu/~djg/">Dan Grossman</a>.
+
     </p>
 
     <h2>Research</h2>
     <p>
 
-    My current research is on developing and applying
+    For my PhD, I worked on developing and applying
     programming language techniques
     to build synthesis tools and fast compilers for computational geometry
     and fabrication.
@@ -42,6 +44,17 @@
 <table>
   <col width="120">
   <col width="650">
+
+  <tr>
+    <td>PhD thesis, August 2021</td>
+    <td>
+      <b>Programming Language Tools and Techniques for Computational Fabrication.</b><br>
+      Chandrakana Nandi.<br>
+    <a href="docs/phdthesis.pdf">pdf</a>
+    </td>
+  </tr>
+
+
   </tr>
     </td>
     <td> SFF 2021 </td>
@@ -58,7 +71,7 @@
     Adriana Schulz,
     Zachary Tatlock
     <br>
-    <a class="aref" href="">Conditionally Accepted</a>
+    <a class="aref">Conditionally Accepted</a>
     </td>
   </tr>
 
@@ -79,7 +92,7 @@
     Dan Grossman,
     Zachary Tatlock
     <br>
-    <a class="aref" href="">Conditionally Accepted</a>
+    <a class="aref">Conditionally Accepted</a>
     </td>
   </tr>
 
@@ -95,7 +108,7 @@
     Khang Lee,
     Nadya Peek.
     <br>
-    <a class="aref" href="">Conditionally Accepted</a>
+    <a class="aref">Conditionally Accepted</a>
     </td>
   </tr>
 
