--- a/index.html
+++ b/index.html
@@ -307,21 +307,8 @@
 <h2>Contact</h2>
 
 <p> The best way to reach me is by email: <a href=
-  "mailto:cnandi@cs.washington.edu">cnandi@cs.washington.edu </a>
+  "mailto:chandra@certora.com">chandra@certora.com </a>
 </p>
-
-<p> My postal address is:
-<br>
-Paul G. Allen School of
-Computer Science & Engineering
-<br>
-University of Washington
-<br>
-AC101 Paul G. Allen Center, Box 352350
-<br>
-185 Stevens Way
-<br>
-Seattle, WA 98195-2350
 
 </body>
 </html>
