--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="photos/cnandi.png" style="width:128px;height:128px;">
 
    <p>
-   I am soon to be a Senior Researcher at <a href="https://certora.com/">Certora</a>.
+   I am a Senior Researcher at <a href="https://certora.com/">Certora</a>.
    I recently graduated with a PhD
    from the <a href="http://uwplse.org/">PLSE</a> group
    at the University of Washington, Seattle where I had a wonderful time
