--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    from the <a href="http://uwplse.org/">PLSE</a> group
    at the University of Washington, Seattle where I had a wonderful time
    working with my incredible advisors,
-   <a target="_blank" href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>,
+   <a target="_blank" href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>
    and <a target="_blank" href="http://homes.cs.washington.edu/~djg/">Dan Grossman</a>.
 
     </p>
@@ -26,13 +26,13 @@
     <h2>Research</h2>
     <p>
 
-    For my PhD, I worked on developing and applying
-    programming language techniques
-    to build synthesis tools and fast compilers for computational geometry
+    For my PhD, I developed
+    programming languages, correct compilers, and
+    synthesis tools for computational geometry
     and fabrication.
     <br>
     <br>
-    Check out our tools, papers, talks and more
+    Check out our tools, papers, talks, and more
       <a target="_blank"
          href="http://incarnate.uwplse.org/">here</a>.
     </p>
