--- a/index.html
+++ b/index.html
@@ -26,10 +26,28 @@
     <h2>Research</h2>
     <p>
 
-    For my PhD, I developed
+    For my PhD, I, together with my collaborators developed
     programming languages, correct compilers, and
     synthesis tools for computational geometry
     and fabrication.
+    We built LambdaCAD, a functional programming language for
+      3D modeling that supports 3D primitives, affine operations, and
+      boolean operators to compose designs.
+    The LambdaCAD compiler generates a triangle mesh from a LambdaCAD program.
+    Using our compiler infrastructure and 3D geometry kernel,
+      we built a decompiler, called Reincarnate,
+      that uses evaluation context to synthesize LambdaCAD programs
+      back from meshes.
+    
+    Our work on <a class="aref" href="docs/siga19-cr.pdf"> Carpentry Compiler</a> and
+      <a class="aref" href="docs/pldi20-cr.pdf"> Szalinski</a> are some of the first
+      tools that use equality saturation as a technique for optimizing new types of compilers and
+      for program synthesis.
+      
+    More recently, I have also been focusing on using <a class="aref" href="docs/popl21-cr.pdf">equality saturation</a>
+     for not just synthesis and optimization, but also to
+      <a class="aref" href="https://arxiv.org/pdf/2108.10436.pdf"> learn the rewrite rules</a>
+      used for equality saturation themselves!
     <br>
     <br>
     Check out our tools, papers, talks, and more
