--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     synthesis tools for computational geometry
     and fabrication.
       <br><br>
-    We built LambdaCAD, a functional programming language for
+    We built <a class="aref" href="docs/icfp18-cr.pdf">LambdaCAD</a>,
+      a functional programming language for
       3D modeling that supports 3D primitives, affine operations, and
       boolean operators to compose designs.
     The LambdaCAD compiler generates a triangle mesh from a LambdaCAD program.
@@ -39,16 +40,15 @@
       we built a decompiler, called Reincarnate,
       that uses evaluation context to synthesize LambdaCAD programs
       back from meshes.
+      Check out my <a href="docs/phdthesis.pdf">thesis</a> for more details on the correctness of our compiler for a subset of LambdaCAD.
        <br><br>
-    Our work on <a class="aref" href="docs/siga19-cr.pdf"> Carpentry Compiler</a> and
-      <a class="aref" href="docs/pldi20-cr.pdf"> Szalinski</a> are some of the first
+    Our work on <a class="aref" href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
+      <a class="aref" href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
       tools that use equality saturation as a technique for optimizing new types of compilers and
       for program synthesis.
     <br><br>
-    More recently, I have also been focusing on using <a class="aref" href="docs/popl21-cr.pdf">equality saturation</a>
-     for not just synthesis and optimization, but also to
-      <a class="aref" href="https://arxiv.org/pdf/2108.10436.pdf"> learn the rewrite rules</a>
-      used for equality saturation themselves!
+    More recently, I have also been focusing on using <a class="aref" href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
+      <a class="aref" href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used for equality saturation themselves!
     <br>
     <br>
     Check out our tools, papers, talks, and more
