--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
     synthesis tools for computational geometry
     and fabrication.
       <br><br>
-    We built <a class="aref" href="docs/icfp18-cr.pdf">LambdaCAD</a>,
+    We built <a href="docs/icfp18-cr.pdf">LambdaCAD</a>,
       a functional programming language for
       3D modeling that supports 3D primitives, affine operations, and
       boolean operators to compose designs.
     The LambdaCAD compiler generates a triangle mesh from a LambdaCAD program.
     Using our compiler infrastructure and 3D geometry kernel,
-      we built a decompiler, called Reincarnate,
+      we built a decompiler, called <a href="docs/icfp18-cr.pdf">Reincarnate</a>,
       that uses evaluation context to synthesize LambdaCAD programs
       back from meshes.
       Check out my <a href="docs/phdthesis.pdf">thesis</a> for more details on the correctness of our compiler for a subset of LambdaCAD.
        <br><br>
-    Our work on <a class="aref" href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
-      <a class="aref" href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
+    Our work on <a href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
+      <a href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
       tools that use equality saturation as a technique for optimizing new types of compilers and
       for program synthesis.
     <br><br>
-    More recently, I have also been focusing on using <a class="aref" href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
-      <a class="aref" href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used for equality saturation themselves!
+    More recently, I have also been focusing on using <a href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
+      <a href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used for equality saturation themselves!
     <br>
     <br>
     Check out our tools, papers, talks, and more
