--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        <br><br>
     Our work on <a href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
       <a href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
-      tools that use equality saturation as a technique for optimizing new types of compilers and
+      tools that use equality saturation as a technique for optimizing unconventional compilers and
       for program synthesis.
     <br><br>
     More recently, I have also been focusing on using <a href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
