--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       for program synthesis.
     <br><br>
     More recently, I have also been focusing on using <a href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
-      <a href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used for equality saturation themselves!
+      <a href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used <em>for</em> equality saturation!
     <br>
     <br>
     Check out our tools, papers, talks, and more
