--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
     Adam Anderson,
     Adriana Schulz,
     Dan Grossman,
-    Zachary Tatlock
+    Zachary Tatlock.
     <br>
-    <a class="aref">Conditionally Accepted</a>
+    <b><i>Distinguished Paper Award</i></b>
+    <br>
+    <a class="aref" href="docs/oopsla21-CR.pdf">pdf</a>
+    <a class="aref" href="https://www.youtube.com/watch?v=5VGTXMgebOo&list=PLyrlk8Xaylp7soIGai1GYm0M0PuG9LIYh&index=27">talk</a>
+    <a class="aref" href="https://github.com/uwplse/ruler">code</a>
     </td>
   </tr>
 
@@ -127,7 +131,7 @@
     Khang Lee,
     Nadya Peek.
     <br>
-    <a class="aref">Conditionally Accepted</a>
+    <a class="aref" href="docs/uist21-CR.pdf">pdf</a>
     </td>
   </tr>
 
