--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <b><i>Distinguished Paper Award</i></b>
     <br>
     <a class="aref" href="docs/oopsla21-CR.pdf">pdf</a>
+    <a class="aref" href="docs/oopsla21-ruler-slides.pdf">slides</a>
     <a class="aref" href="https://www.youtube.com/watch?v=5VGTXMgebOo&list=PLyrlk8Xaylp7soIGai1GYm0M0PuG9LIYh&index=27">talk</a>
     <a class="aref" href="https://github.com/uwplse/ruler">code</a>
     </td>
