--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
   <col width="120">
   <col width="650">
 
+    <tr>
+    <td>ACM TOG, 2022</td>
+    <td>
+      <b>Co-Optimization of Design and Fabrication Plans for Carpentry.</b><br>
+      Haisen Zhao, Max Willsey, Amy Zhu, Chandrakana Nandi, Zachary Tatlock, Justin Solomon, Adriana Schulz<br>
+    <a href="">Conditionally Accepted</a>
+    </td>
+  </tr>
+    
+  
   <tr>
     <td>PhD thesis, August 2021</td>
     <td>
@@ -72,8 +82,8 @@
     <a href="docs/phdthesis.pdf">pdf</a>
     </td>
   </tr>
-
-
+    
+  
   </tr>
     </td>
     <td> SFF 2021 </td>
@@ -90,7 +100,7 @@
     Adriana Schulz,
     Zachary Tatlock
     <br>
-    <a class="aref">Conditionally Accepted</a>
+    <a class="aref">pdf</a>
     </td>
   </tr>
 
