--- a/index.html
+++ b/index.html
@@ -63,13 +63,21 @@
 <table>
   <col width="120">
   <col width="650">
+    <tr>
+    <td>POPL, 2023</td>
+    <td>
+      <b>babble: Learning Better Abstractions with E-Graphs and Anti-Unification.</b><br>
+      David Cao, Rose Kunkel, Chandrakana Nandi, Max Willsey, Zachary Tatlock, Nadia Polikarpova<br>
+    <a href="">To Appear</a>
+    </td>
+  </tr>
 
     <tr>
     <td>ACM TOG, 2022</td>
     <td>
       <b>Co-Optimization of Design and Fabrication Plans for Carpentry.</b><br>
       Haisen Zhao, Max Willsey, Amy Zhu, Chandrakana Nandi, Zachary Tatlock, Justin Solomon, Adriana Schulz<br>
-    <a href="">Conditionally Accepted</a>
+    <a href="docs/tog22-carpentry-cr.pdf">pdf</a>
     </td>
   </tr>
     
