--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <col width="120">
   <col width="650">
     <tr>
-    <td>POPL, 2023</td>
+    <td>POPL 2023</td>
     <td>
       <b>babble: Learning Better Abstractions with E-Graphs and Anti-Unification.</b><br>
       David Cao, Rose Kunkel, Chandrakana Nandi, Max Willsey, Zachary Tatlock, Nadia Polikarpova<br>
