--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <td>
       <b>babble: Learning Better Abstractions with E-Graphs and Anti-Unification.</b><br>
       David Cao, Rose Kunkel, Chandrakana Nandi, Max Willsey, Zachary Tatlock, Nadia Polikarpova<br>
-    <a href="">To Appear</a>
+      <a href="docs/babble-cr.pdf">pdf</a>
     </td>
   </tr>
 
@@ -108,7 +108,7 @@
     Adriana Schulz,
     Zachary Tatlock
     <br>
-    <a class="aref">pdf</a>
+    <a href="docs/sff21-cr.pdf">pdf</a>
     </td>
   </tr>
 
@@ -131,7 +131,7 @@
     <br>
     <b><i>Distinguished Paper Award</i></b>
     <br>
-    <a class="aref" href="docs/oopsla21-CR.pdf">pdf</a>
+    <a class="aref" href="docs/oopsla21-cr.pdf">pdf</a>
     <a class="aref" href="docs/oopsla21-ruler-slides.pdf">slides</a>
     <a class="aref" href="https://www.youtube.com/watch?v=5VGTXMgebOo&list=PLyrlk8Xaylp7soIGai1GYm0M0PuG9LIYh&index=27">talk</a>
     <a class="aref" href="https://github.com/uwplse/ruler">code</a>
@@ -150,7 +150,7 @@
     Khang Lee,
     Nadya Peek.
     <br>
-    <a class="aref" href="docs/uist21-CR.pdf">pdf</a>
+    <a class="aref" href="docs/uist21-cr.pdf">pdf</a>
     </td>
   </tr>
 
