--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <td>
       <b>babble: Learning Better Abstractions with E-Graphs and Anti-Unification.</b><br>
       David Cao, Rose Kunkel, Chandrakana Nandi, Max Willsey, Zachary Tatlock, Nadia Polikarpova<br>
-      <a href="docs/babble-cr.pdf">pdf</a>
+      <a href="docs/babble23-cr.pdf">pdf</a>
     </td>
   </tr>
 
@@ -250,7 +250,7 @@
         <br>
     Chandrakana Nandi, Anat Caspi, Dan Grossman, Zachary Tatlock.
     <br>
-    <a class="aref" href="docs/snapl-cr.pdf">pdf</a>
+    <a class="aref" href="docs/snapl17-cr.pdf">pdf</a>
     <a class="aref" href="http://incarnate.uwplse.org/">website</a>
     </td>
   </tr>
@@ -263,7 +263,7 @@
     Chandrakana Nandi, Dan Grossman, Adrian Sampson, Todd Mytkowicz,
     Kathryn S. McKinley.
     <br>
-    <a href="docs/mapl-cr.pdf">pdf</a>
+    <a href="docs/mapl17-cr.pdf">pdf</a>
     </td>
   </tr>
 
@@ -273,7 +273,7 @@
     <b>Automatic Trigger Generation for Rule-based Smart Homes.</b>
       <br>
       Chandrakana Nandi, Michael D. Ernst.<br>
-  <a href="docs/plas-cr.pdf">pdf</a>
+  <a href="docs/plas16-cr.pdf">pdf</a>
   </td>
   </tr>
 
@@ -305,7 +305,7 @@
     <td>
       <b>Stochastic Contracts for Runtime Checking of Component-based Real-time Systems.</b><br>
       Chandrakana Nandi, Aurelien Monot, Manuel Oriol.<br>
-    <a href="docs/cbse-cr.pdf">pdf</a>
+    <a href="docs/cbse15-cr.pdf">pdf</a>
     </td>
   </tr>
 
