--- a/index.html
+++ b/index.html
@@ -13,24 +13,45 @@
     <img src="photos/cnandi.png" style="width:128px;height:128px;">
 
    <p>
-   I am a Senior Researcher at <a href="https://certora.com/">Certora</a>.
-   I recently graduated with a PhD
+   I am a principal researcher
+   at <a href="https://certora.com/">Certora</a>
+   and affiliate assistant professor at University of Washington, Seattle.
+
+   Before this, in 2021, I graduated with a PhD
    from the <a href="http://uwplse.org/">PLSE</a> group
    at the University of Washington, Seattle where I had a wonderful time
    working with my incredible advisors,
    <a target="_blank" href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>
    and <a target="_blank" href="http://homes.cs.washington.edu/~djg/">Dan Grossman</a>.
-
+   You can find more information in my <a href="docs/cv/chandrakana_CV.pdf">CV</a>.
     </p>
 
     <h2>Research</h2>
     <p>
+    Currently, I am intersted in building tools
+    for scaling automated formal verification to real-world programs;
+    we are focusing on DeFi applications specifically.
+    As part of this vision, we are working on techniques
+    to help users write formal specifications more easily using
+    techniques like <a href="https://github.com/Certora/gambit"> mutation testing</a>.
 
+    <br>
+    I also work on <a href="docs/popl21-cr.pdf">equality saturation</a>
+    and its applications in synthesis, verification, and optimization.
+    Our work on <a href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
+      <a href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
+      tools that use equality saturation as a technique for optimizing unconventional compilers and
+      for program synthesis.
+      We also built <a href="https://github.com/uwplse/ruler">Ruler</a>,
+      a very cool tool that uses equality saturation to
+      synthesize rewrite rules for equality saturation.
+
+    <br>
+    <br>
     For my PhD, I developed
     programming languages, correct compilers, and
     synthesis tools for computational geometry
     and fabrication.
-      <br><br>
     We built <a href="docs/icfp18-cr.pdf">LambdaCAD</a>,
       a functional programming language for
       3D modeling that supports 3D primitives, affine operations, and
@@ -42,18 +63,10 @@
       back from meshes.
       Check out my <a href="docs/phdthesis.pdf">thesis</a> for more details on the correctness of our compiler for a subset of LambdaCAD.
        <br><br>
-    Our work on <a href="docs/siga19-cr.pdf">Carpentry Compiler</a> and
-      <a href="docs/pldi20-cr.pdf">Szalinski</a> are some of the first
-      tools that use equality saturation as a technique for optimizing unconventional compilers and
-      for program synthesis.
     <br><br>
-    More recently, I have also been focusing on using <a href="docs/popl21-cr.pdf">equality saturation</a> for not just synthesis and optimization, but also to
-      <a href="https://arxiv.org/pdf/2108.10436.pdf">learn the rewrite rules</a> used <em>for</em> equality saturation!
-    <br>
-    <br>
     Check out our tools, papers, talks, and more
       <a target="_blank"
-         href="http://incarnate.uwplse.org/">here</a>.
+         href="https://uwplse.org/incarnate">here</a>.
     </p>
 
 <p>
