--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 
 <link rel="stylesheet" href="index.css">
 
-  <head>
+<head>
     <title> Chandrakana Nandi </title>
-  </head>
+</head>
 
-  <body>
-    <h1>Chandrakana Nandi</h1>
-
-    <img src="photos/cnandi.png" style="width:128px;height:128px;">
+<body>
+<h1>Chandrakana Nandi</h1>
+<img src="photos/cnandi.png" style="width:128px;height:128px;">
 
    <p>
    I am a principal researcher
    at <a href="https://certora.com/">Certora</a>
    and affiliate assistant professor at University of Washington, Seattle.
 
-   Before this, in 2021, I graduated with a PhD
+   Before this, I graduated with a PhD
    from the <a href="http://uwplse.org/">PLSE</a> group
-   at the University of Washington, Seattle where I had a wonderful time
-   working with my incredible advisors,
+   at the University of Washington, Seattle where I worked with
+   my incredible advisors,
    <a target="_blank" href="http://homes.cs.washington.edu/~ztatlock/">Zachary Tatlock</a>
    and <a target="_blank" href="http://homes.cs.washington.edu/~djg/">Dan Grossman</a>.
-   You can find more information in my <a href="docs/cv/chandrakana_CV.pdf">CV</a>.
-    </p>
+   </p>
 
     <h2>Research</h2>
     <p>
@@ -33,8 +31,9 @@
     we are focusing on DeFi applications specifically.
     As part of this vision, we are working on techniques
     to help users write formal specifications more easily using
-    techniques like <a href="https://github.com/Certora/gambit"> mutation testing</a>.
+    <a href="https://github.com/Certora/gambit"> mutation testing</a>.
 
+    <br>
     <br>
     I also work on <a href="docs/popl21-cr.pdf">equality saturation</a>
     and its applications in synthesis, verification, and optimization.
@@ -44,7 +43,7 @@
       for program synthesis.
       We also built <a href="https://github.com/uwplse/ruler">Ruler</a>,
       a very cool tool that uses equality saturation to
-      synthesize rewrite rules for equality saturation.
+      synthesize rewrite rules for equality saturation!
 
     <br>
     <br>
@@ -61,15 +60,12 @@
       we built a decompiler, called <a href="docs/icfp18-cr.pdf">Reincarnate</a>,
       that uses evaluation context to synthesize LambdaCAD programs
       back from meshes.
-      Check out my <a href="docs/phdthesis.pdf">thesis</a> for more details on the correctness of our compiler for a subset of LambdaCAD.
-       <br><br>
-    <br><br>
-    Check out our tools, papers, talks, and more
-      <a target="_blank"
-         href="https://uwplse.org/incarnate">here</a>.
+      Check out my <a href="docs/phdthesis.pdf">thesis</a> for more details
+      on the correctness of our compiler for a subset of
+      LambdaCAD and for open problems in computational fabrication that can be
+      tackled with PL techniques!
+      Check out our <a target="_blank" href="https://uwplse.org/incarnate">tools, papers, talks, and more</a>.
     </p>
-
-<p>
 
 <h2> Publications </h2>
 
@@ -93,8 +89,6 @@
     <a href="docs/tog22-carpentry-cr.pdf">pdf</a>
     </td>
   </tr>
-    
-  
   <tr>
     <td>PhD thesis, August 2021</td>
     <td>
@@ -103,8 +97,6 @@
     <a href="docs/phdthesis.pdf">pdf</a>
     </td>
   </tr>
-    
-  
   </tr>
     </td>
     <td> SFF 2021 </td>
@@ -362,7 +354,9 @@
 <h2>Contact</h2>
 
 <p> The best way to reach me is by email: <a href=
-  "mailto:chandra@certora.com">chandra@certora.com </a>
+  "mailto:chandra@certora.com">chandra@certora.com </a>.
+You can find more details about my work in my
+  <a href="docs/cv/chandrakana_CV.pdf">CV</a>.
 </p>
 
 </body>
