--- a/index.html
+++ b/index.html
@@ -69,10 +69,20 @@
 
 <h2> Publications </h2>
 
+  \ Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
+    Equality Saturation Theory Exploration à la Carte, \textit{conditionally at OOPSLA 2023}.
 <table>
   <col width="120">
   <col width="650">
     <tr>
+    <td>OOPSLA 2023</td>
+    <td>
+      <b>Equality Saturation Theory Exploration à la Carte.</b><br>
+      Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, Chandrakana Nandi<br>
+      <a href="">pdf</a>
+    </td>
+  </tr>
+  <tr>
     <td>POPL 2023</td>
     <td>
       <b>babble: Learning Better Abstractions with E-Graphs and Anti-Unification.</b><br>
