--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="photos/cnandi.png" style="width:128px;height:128px;">
 
    <p>
-   I am a principal researcher
+   I am the Director of US R&D
    at <a href="https://certora.com/">Certora</a>
    and affiliate assistant professor at University of Washington, Seattle.
 
@@ -72,7 +72,15 @@
 <table>
   <col width="120">
   <col width="650">
-    <tr>
+  <tr>
+    <td>ICST (Industry) 2024</td>
+    <td>
+      <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts</b><br>
+      Enzo Nicourt, Ben Kushigian, Chandrakana Nandi, Ylies Falcone<br>
+      <a href="TO APPEAR">To appear</a>
+    </td>
+  </tr>
+  <tr>
     <td>OOPSLA 2023</td>
     <td>
       <b>Equality Saturation Theory Exploration à la Carte.</b><br>
