--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h2>Research</h2>
     <p>
-    Currently, I am intersted in building tools
+    I am interested in building tools
     for scaling automated formal verification to real-world programs;
     we are focusing on DeFi applications specifically.
     As part of this vision, we are working on techniques
@@ -47,10 +47,14 @@
 
     <br>
     <br>
-    For my PhD, I developed
+    I have developed
     programming languages, correct compilers, and
     synthesis tools for computational geometry
     and fabrication.
+    I still work on these topics whenever I can.
+
+    <br>
+    <br>
     We built <a href="docs/icfp18-cr.pdf">LambdaCAD</a>,
       a functional programming language for
       3D modeling that supports 3D primitives, affine operations, and
