--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
   <col width="120">
   <col width="650">
   <tr>
-    <td>ICST (Industry) 2024</td>
+    <td>ICST 2024</td>
     <td>
-      <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts</b><br>
+      <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts (Industry Track)</b><br>
       Enzo Nicourt, Ben Kushigian, Chandrakana Nandi, Ylies Falcone<br>
       <a href="TO APPEAR">To appear</a>
     </td>
