--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <td>
       <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts (Industry Track)</b><br>
       Enzo Nicourt, Ben Kushigian, Chandrakana Nandi, Ylies Falcone<br>
-      <a href="TO APPEAR">To appear</a>
+      <a href="docs/icst24-cr.pdf">pdf</a>
     </td>
   </tr>
   <tr>
@@ -89,7 +89,7 @@
     <td>
       <b>Equality Saturation Theory Exploration à la Carte.</b><br>
       Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, Chandrakana Nandi<br>
-      <a href="">pdf</a>
+      <a href="docs/oopsla23-cr.pdf">pdf</a>
     </td>
   </tr>
   <tr>
