--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     I am interested in building tools
     for scaling automated formal verification to real-world programs;
     we are focusing on DeFi applications specifically.
-    As part of this vision, we are working on techniques
-    to help users write formal specifications more easily using
+    As part of this vision,
+    we are working on new verification tools for languages like WASM and
+    techniques to help users write formal specifications more easily using
     <a href="https://github.com/Certora/gambit"> mutation testing</a>.
 
     <br>
