--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
     </td>
   </tr>
   <tr>
+    <td>SCF Demo 2024</td>
+    <td>
+      <b>Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research</b><br>
+      Valkyrie Savage, Nóra Püsök, Harrison Goldstein, Chandrakana Nandi, Jia Yi Ren, Lora Oehlberg<br>
+      <a href="docs/scfdemo24-cr.pdf">pdf</a>
+    </td>
+  </tr>
+  <tr>
     <td>OOPSLA 2023</td>
     <td>
       <b>Equality Saturation Theory Exploration à la Carte.</b><br>
