--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
     </td>
   </tr>
   <tr>
+    <td>LATTE 2024</td>
+    <td>
+      <b>There and Back Again: A Netlist's Tale with Much Egraphin'</b><br>
+      Gus Henry Smith, Zachary D. Sisco, Thanawat Techaumnuaiwit, Jingtao Xia, Vishal Canumalla, Andrew Cheung, Zachary Tatlock, Chandrakana Nandi, Jonathan Balkind
+      <br>
+      <a href="docs/latte24-cr.pdf">pdf</a>
+    </td>
+  </tr>
+  <tr>
     <td>OOPSLA 2023</td>
     <td>
       <b>Equality Saturation Theory Exploration à la Carte.</b><br>
