--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
   <col width="120">
   <col width="650">
   <tr>
+    <td>OOPSLA 2024</td>
+    <td>
+      <b>Practical Verification Of Smart Contracts Using Memory Splitting</b><br>
+      Shelly Grossman, Alexander Bakst, Sameer Arora, John Toman, Mooly Sagiv, Chandrakana Nandi <br>
+      <a href="">To appear</a>
+    </td>
+  </tr>
+  <tr>
     <td>ICST 2024</td>
     <td>
       <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts (Industry Track)</b><br>
