--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       Check out our <a target="_blank" href="https://uwplse.org/incarnate">tools, papers, talks, and more</a>.
     </p>
 
-<h2> Publications </h2>
+<h2> Conference and Journal Publications </h2>
 
 <table>
   <col width="120">
@@ -91,23 +91,6 @@
       <b>Using Mutation Testing To Improve and Minimize Test Suites for Smart Contracts (Industry Track)</b><br>
       Enzo Nicourt, Ben Kushigian, Chandrakana Nandi, Ylies Falcone<br>
       <a href="docs/icst24-cr.pdf">pdf</a>
-    </td>
-  </tr>
-  <tr>
-    <td>SCF Demo 2024</td>
-    <td>
-      <b>Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research</b><br>
-      Valkyrie Savage, Nóra Püsök, Harrison Goldstein, Chandrakana Nandi, Jia Yi Ren, Lora Oehlberg<br>
-      <a href="docs/scfdemo24-cr.pdf">pdf</a>
-    </td>
-  </tr>
-  <tr>
-    <td>LATTE 2024</td>
-    <td>
-      <b>There and Back Again: A Netlist's Tale with Much Egraphin'</b><br>
-      Gus Henry Smith, Zachary D. Sisco, Thanawat Techaumnuaiwit, Jingtao Xia, Vishal Canumalla, Andrew Cheung, Zachary Tatlock, Chandrakana Nandi, Jonathan Balkind
-      <br>
-      <a href="docs/latte24-cr.pdf">pdf</a>
     </td>
   </tr>
   <tr>
