--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <table>
   <col width="120">
   <col width="650">
+
   <tr>
     <td>OOPSLA 2024</td>
     <td>
@@ -85,6 +86,7 @@
       <a href="">To appear</a>
     </td>
   </tr>
+
   <tr>
     <td>ICST 2024</td>
     <td>
@@ -93,6 +95,7 @@
       <a href="docs/icst24-cr.pdf">pdf</a>
     </td>
   </tr>
+
   <tr>
     <td>OOPSLA 2023</td>
     <td>
@@ -101,6 +104,7 @@
       <a href="docs/oopsla23-cr.pdf">pdf</a>
     </td>
   </tr>
+
   <tr>
     <td>POPL 2023</td>
     <td>
@@ -110,7 +114,7 @@
     </td>
   </tr>
 
-    <tr>
+  <tr>
     <td>ACM TOG, 2022</td>
     <td>
       <b>Co-Optimization of Design and Fabrication Plans for Carpentry.</b><br>
@@ -118,15 +122,8 @@
     <a href="docs/tog22-carpentry-cr.pdf">pdf</a>
     </td>
   </tr>
+
   <tr>
-    <td>PhD thesis, August 2021</td>
-    <td>
-      <b>Programming Language Tools and Techniques for Computational Fabrication.</b><br>
-      Chandrakana Nandi.<br>
-    <a href="docs/phdthesis.pdf">pdf</a>
-    </td>
-  </tr>
-  </tr>
     </td>
     <td> SFF 2021 </td>
     <td>
@@ -289,6 +286,51 @@
     </td>
   </tr>
 
+
+  <tr>
+    <td> CBSE 2015</td>
+    <td>
+      <b>Stochastic Contracts for Runtime Checking of Component-based Real-time Systems.</b><br>
+      Chandrakana Nandi, Aurelien Monot, Manuel Oriol.<br>
+    <a href="docs/cbse15-cr.pdf">pdf</a>
+    </td>
+  </tr>
+
+</table>
+
+
+<h2> Workshops, Theses, and Other Publications </h2>
+<table>
+  <col width="120">
+  <col width="650">
+  <tr>
+    <td>SCF Demo 2024</td>
+    <td>
+      <b>Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research</b><br>
+      Valkyrie Savage, Nóra Püsök, Harrison Goldstein, Chandrakana Nandi, Jia Yi Ren, Lora Oehlberg<br>
+      <a href="docs/scfdemo24-cr.pdf">pdf</a>
+    </td>
+  </tr>
+
+  <tr>
+    <td>LATTE 2024</td>
+    <td>
+      <b>There and Back Again: A Netlist's Tale with Much Egraphin'</b><br>
+      Gus Henry Smith, Zachary D. Sisco, Thanawat Techaumnuaiwit, Jingtao Xia, Vishal Canumalla, Andrew Cheung, Zachary Tatlock, Chandrakana Nandi, Jonathan Balkind
+      <br>
+      <a href="docs/latte24-cr.pdf">pdf</a>
+    </td>
+  </tr>
+
+  <tr>
+    <td>PhD thesis, August 2021</td>
+    <td>
+      <b>Programming Language Tools and Techniques for Computational Fabrication.</b><br>
+      Chandrakana Nandi.<br>
+    <a href="docs/phdthesis.pdf">pdf</a>
+    </td>
+  </tr>
+
   <tr>
     <td> MAPL 2017 </td>
     <td>
@@ -298,6 +340,17 @@
     Kathryn S. McKinley.
     <br>
     <a href="docs/mapl17-cr.pdf">pdf</a>
+    </td>
+  </tr>
+
+  <tr>
+    <td> PPS 2017 </td>
+    <td>
+      <b>Debugging Probabilistic Programs.</b>
+    <br>
+    Chandrakana Nandi, Dan Grossman, Adrian Sampson, Todd Mytkowicz,
+    Kathryn S. McKinley.
+    <br>
     </td>
   </tr>
 
@@ -334,14 +387,6 @@
     </td>
   </tr>
 
-  <tr>
-    <td> CBSE 2015</td>
-    <td>
-      <b>Stochastic Contracts for Runtime Checking of Component-based Real-time Systems.</b><br>
-      Chandrakana Nandi, Aurelien Monot, Manuel Oriol.<br>
-    <a href="docs/cbse15-cr.pdf">pdf</a>
-    </td>
-  </tr>
 
   <tr>
     <td>MS thesis, August 2014</td>
@@ -390,3 +435,4 @@ You can find more details about my work in my
 
 </body>
 </html>
+
