--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <td>
       <b>Practical Verification Of Smart Contracts Using Memory Splitting</b><br>
       Shelly Grossman, Alexander Bakst, Sameer Arora, John Toman, Mooly Sagiv, Chandrakana Nandi <br>
-      <a href="">To appear</a>
+      <a href="docs/oopsla24-cr.pdf">pdf</a>
     </td>
   </tr>
 
