--- a/index.html
+++ b/index.html
@@ -304,6 +304,15 @@
   <col width="120">
   <col width="650">
   <tr>
+    <td>WOSET 2024</td>
+    <td>
+      <b>Scaling Program Synthesis Based Technology Mapping with Equality Saturation.</b><br>
+        Gus Henry Smith, Colin Knizek, Daniel Petrisko, Zachary Tatlock, Jonathan Balkind, Gilbert Louis Bernstein, Haobin Ni, Chandrakana Nandi.<br>
+      <a href="docs/woset24-cr.pdf">pdf</a>
+    </td>
+  </tr>
+
+  <tr>
     <td>SCF Demo 2024</td>
     <td>
       <b>Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research</b><br>
