--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     Dan Grossman,
     Zachary Tatlock.
     <br>
-    <b><i>Distinguished Paper Award</i></b>
+    <b><i style="color:red">Distinguished Paper Award</i></b>
     <br>
     <a class="aref" href="docs/oopsla21-cr.pdf">pdf</a>
     <a class="aref" href="docs/oopsla21-ruler-slides.pdf">slides</a>
@@ -216,7 +216,7 @@
     Pavel Panchekha,
     Zachary Tatlock.
     <br>
-    <b><i>Distinguished Paper Award, Sigplan Research Highlight</i></b>
+    <b><i style="color:red">Distinguished Paper Award, Sigplan Research Highlight</i></b>
     <br>
     <a class="aref" href="docs/popl21-cr.pdf">pdf</a>
     <a class="aref" href="https://github.com/egraphs-good/egg">github</a>
