--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     for scaling automated formal verification to real-world programs;
     we are focusing on DeFi applications specifically.
     As part of this vision,
-    we are working on new verification tools for languages like WASM and
-    techniques to help users write formal specifications more easily using
+    we are working on new verification tools for languages like <a href="https://github.com/Certora/CertoraProver"> WASM</a>
+    and techniques to help users write formal specifications more easily using
     <a href="https://github.com/Certora/gambit"> mutation testing</a>.
 
     <br>
@@ -48,11 +48,10 @@
 
     <br>
     <br>
-    I have developed
+    Another interest of mine is computational fabrication and geometry.
+    I like building
     programming languages, correct compilers, and
-    synthesis tools for computational geometry
-    and fabrication.
-    I still work on these topics whenever I can.
+    synthesis tools for this domain.
 
     <br>
     <br>
@@ -77,6 +76,15 @@
 <table>
   <col width="120">
   <col width="650">
+
+<tr>
+    <td>UIST 2025</td>
+    <td>
+      <b>FEDT: Supporting Experiment Design and Execution in HCI Fabrication Research</b><br>
+      Valkyrie Savage, Harrison Goldstein, Nora Pusok, Jia Yi Ren, Bhaskar Dutt, Chandrakana Nandi, Lora Oehlberg<br>
+      <a href="docs/uist25-cr.pdf">pdf</a>
+    </td>
+  </tr>
 
   <tr>
     <td>OOPSLA 2024</td>
