--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
 <table>
   <col width="120">
   <col width="650">
+<tr>
+    <td>OOPSLA 2025</td>
+    <td>
+      <b>Formalizing Linear Motion G-code for Invariant Checking and Differential Testing of Fabrication Tools</b><br>
+      Yumeng He, Chandrakana Nandi, Sreepathi Pai<br>
+      <a href="docs/oopsla25-cr.pdf">pdf</a>
+    </td>
+  </tr>
 
 <tr>
     <td>UIST 2025</td>
