--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     Pavel Panchekha,
     Zachary Tatlock.
     <br>
-    <b><i style="color:red">Distinguished Paper Award, Sigplan Research Highlight</i></b>
+    <b><i style="color:red">Distinguished Paper Award, Sigplan Research Highlight, CACM Research Highlight</i></b>
     <br>
     <a class="aref" href="docs/popl21-cr.pdf">pdf</a>
     <a class="aref" href="https://github.com/egraphs-good/egg">github</a>
